--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h>Hi!</h>
-<script>window.location.replace("https://stackoverflow.com")</script>
+<script>window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ")</script>
