--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h>Hi!</h>
-<script>window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ")</script>
+<p>Hi! Welcome to my site, I hate making sites but it's totally <span style="color: #ff0000;">worth it!</span></p>
+/* hehe, I rickrolled sum people with this thingy, 
+<script>window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ")</script> 
+*/
